--- a/week-1/Homework/dom-manipulation-2/index.html
+++ b/week-1/Homework/dom-manipulation-2/index.html
@@ -77,18 +77,18 @@
 				<form>
 					<div class="form-group">
 						<label for="exampleInputEmail1">Email address</label>
-						<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+						<input type="email" class="formControl" id="exampleInputEmail1" aria-describedby="emailHelp"
 							placeholder="Enter email">
 						<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
 							else.</small>
 					</div>
 					<div class="form-group">
 						<label for="example-text-input">Your name</label>
-						<input class="form-control" type="text" value="" id="example-text-input">
+						<input class="formControl" type="text" value="" id="exampleTextInput">
 					</div>
 					<div class="form-group">
 						<label for="exampleTextarea">Describe yourself</label>
-						<textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+						<textarea class="formControl" id="exampleTextarea" rows="3"></textarea>
 					</div>
 					<button type="submit" id="submitBtn" class="btn btn-primary">Submit</button>
 				</form>
